[MM-25429] fix finder focus, align buttons, keep state consistent

--- a/src/browser/css/components/Finder.css
+++ b/src/browser/css/components/Finder.css
@@ -8,7 +8,6 @@
   border: none;
   background: #d2d2d2;
   outline: none;
-  font-size: 18px;
   height: 26px;
 }
 
