--- a/src/browser/css/components/MainPage.css
+++ b/src/browser/css/components/MainPage.css
@@ -14,7 +14,6 @@ div[id*="-permissionDialog"] {
 
 .finder {
   position: fixed;
-  top: 0;
   right: 200px;
   padding: 4px;
   background: #eee;
